--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -45,6 +45,7 @@ measures for how well our classifier performed include *precision* and *recall*;
 you will encounter them in other more advanced courses on this topic. This process is illustrated below:
 
 <center><img src="img/ML-paradigm.png" width="800" /></center>
+(TODO CHANGE VALIDATION TO TEST IN IMG)
 
 
 In R, we can use the `caret` package not only to perform K-nearest neighbour classification, but also to assess how well our 
@@ -78,7 +79,9 @@ perim_concav
 Once we have decided on a predictive question to answer and done some preliminary exploration, the 
 very next thing to do is to split the data
 into the training and test sets. Typically, the training set is between 50 - 100% of the data, while the test
-set is the remaining 0 - 50%. Here, we will use 75% of the data for training, and 25% for testing. 
+set is the remaining 0 - 50%; the intuition is that you want to trade off between training an accurate model (by using
+a larger training data set) and getting an accurate evaluation of its performance (by using a larger test data set). 
+Here, we will use 75% of the data for training, and 25% for testing. 
 To do this we will use the `createDataPartition` function from the `caret` package, specifying values for 3 arguments: 
 
 1. `y`: the class labels. These must be a vector.
@@ -183,84 +186,124 @@ label on roughly 80% of the examples.
 
 ## Tuning the classifier
 
-How can we pick K? split up the training set!
+The vast majority of predictive models in statistics and machine learning have *parameters* that you have to pick. For example,
+in the K-nearest neighbour classification algorithm we have been using in the past two chapters, we have had to pick the
+number of neighbours $K$ for the class vote. Is it possible to make this selection, i.e., *tune* the model, in a principled way?
+Ideally what we want is to somehow maximize the performance of our classifier on data *it hasn't seen yet*. So we will play
+the same trick we did before when evaluating our classifier: we'll split our **overall training data set** further into two subsets, called
+the **training set** and **validation set**. We will use the newly-named **training set** for building the classifier,
+and the **validation set** for evaluating it! Then we will try different values of the parameter $K$
+and pick the one that yields the highest accuracy.
 
-> Note: Remember: don't touch the test set!
+> **Remember:** *don't touch the test set during the tuning process. Tuning is a part of model training!*
 
-### Cross validation
+### Cross-validation
 
-<center>
-<figure class="image">
-<img src="img/testing.png" width="600"/>
-<figcaption> 
-The standard data set split pattern in machine learning. Source: https://towardsdatascience.com/train-test-split-and-cross-validation-in-python-80b61beca4b6
-</figcaption>
-</figure>
-</center>
+There is an important detail to mention about the process of tuning: we can, if we want to, split our overall training data up 
+in multiple different ways, train and evaluate a classifier for each split, and then choose the parameter based on *all* of the 
+different results. If we just split our overall training data *once*, our best parameter choice will depend entirely on whatever 
+data was lucky enough to end up in the validation set. Perhaps using multiple different train / validation splits, we'll 
+get a better estimate of accuracy, which will lead to a better choice of the number of neighbours $K$ for the overall
+set of training data. 
 
+> **Note:** you might be wondering why we can't we use the multiple splits to test our final classifier after tuning is done. This is simply
+> because at the end of the day, we will produce a single classifier using our overall training data. If we do multiple train / test splits, we will
+> end up with multiple classifiers, each with their own accuracy evaluated on different test data!
 
-### Choosing the number of neighbours
+###
+Specifically, we will split our **training data set** into $C$ evenly-sized chunks (usually in practice researchers have chosen $C$ to be 5 or 10),
 
 Is that the best estimate of accuracy that we can get? What would happen if we again shuffled the observations in our training and validation sets, would we get the same accuracy? Let's do and experiment and see. By changing the `set.seed` value, we can get a different shuffle of the data when we create our training and validation data sets. 
 
 Using `set.seed(4321)`
+###
 
-```{r 06-set-seed-4321}
-set.seed(4321) # makes the random selection of rows reproducible
-set_rows <- cancer %>% 
-  select(Class) %>% 
-  unlist() %>% # converts Class from a tibble to a vector
+
+Let's investigate this idea in R! In particular, we will generate three different train / validation splits of our overall training data,
+train three different K-nearest neighbour models, and evaluate them using different seed values in the `set.seed` function. First we'll
+rename our overall training data.
+
+```{r 06-rename-train}
+X_train_total <- X_train
+Y_train_total <- Y_train
+```
+
+The first seed value we'll use is 1:
+
+```{r 06-set-seed-1}
+set.seed(1) # makes the random selection of rows reproducible
+# create the 75 / 25 train/validation split
+set_rows <- Y_train_total %>% 
   createDataPartition(p = 0.75, list = FALSE)
-training_set <- cancer %>% slice(set_rows)
-validation_set <- cancer %>% slice(-set_rows)
-X_train <- training_set %>% 
-  select(Concavity, Smoothness) %>% 
-  data.frame()
-Y_train <- training_set %>% 
-  select(Class) %>% 
-  unlist()
+
+#split the X and Y data into train/validation
+X_train <- X_train_total %>% slice(set_rows)
+Y_train <- Y_train_total[set_rows]
+X_validation <- X_train_total %>% slice(-set_rows)
+Y_validation <- Y_train_total[-set_rows]
+
+#train the KNN model with K=3, and predict the validation labels
 k = data.frame(k = 3)
 model_knn <- train(x = X_train, y = Y_train, method = "knn", tuneGrid = k)
-X_validation <- validation_set %>% 
-  select(Concavity, Smoothness) %>% 
-  data.frame()
 Y_validation_predicted <- predict(object = model_knn, X_validation)
-Y_validation <- validation_set %>% 
-  select(Class) %>% 
-  unlist()
+
+#compute the accuracy
 model_quality <- confusionMatrix(data = Y_validation_predicted, reference = Y_validation)
 model_quality$overall[1]
 ```
 
-Using `set.seed(8765)`
-```{r 06-set-seed-5678}
-set.seed(8765) # makes the random selection of rows reproducible
-set_rows <- cancer %>% 
-  select(Class) %>% 
-  unlist() %>% # converts Class from a tibble to a vector
+The second we'll use is 2:
+
+```{r 06-set-seed-2}
+set.seed(2) # makes the random selection of rows reproducible
+# create the 75 / 25 train/validation split
+set_rows <- Y_train_total %>% 
   createDataPartition(p = 0.75, list = FALSE)
-training_set <- cancer %>% slice(set_rows)
-validation_set <- cancer %>% slice(-set_rows)
-X_train <- training_set %>% 
-  select(Concavity, Smoothness) %>% 
-  data.frame()
-Y_train <- training_set %>% 
-  select(Class) %>% 
-  unlist()
+
+#split the X and Y data into train/validation
+X_train <- X_train_total %>% slice(set_rows)
+Y_train <- Y_train_total[set_rows]
+X_validation <- X_train_total %>% slice(-set_rows)
+Y_validation <- Y_train_total[-set_rows]
+
+#train the KNN model with K=3, and predict the validation labels
 k = data.frame(k = 3)
 model_knn <- train(x = X_train, y = Y_train, method = "knn", tuneGrid = k)
-X_validation <- validation_set %>% 
-  select(Concavity, Smoothness) %>% 
-  data.frame()
 Y_validation_predicted <- predict(object = model_knn, X_validation)
-Y_validation <- validation_set %>% 
-  select(Class) %>% 
-  unlist()
+
+#compute the accuracy
 model_quality <- confusionMatrix(data = Y_validation_predicted, reference = Y_validation)
 model_quality$overall[1]
 ```
 
-When we have 3 different shuffles of the data, we get 3 different values for accuracy! 0.7957746, 0.8661972 and 0.7676056! Which one is correct? Sadly, there is no easy answer to that question. The best we can do is to do this many times and take the average of the accuracies. Typically this is done is a more structured way so that each observation in the data set is used in a validation set only a single time. The name for this strategy is called cross-validation and we illustrate it below:
+And finally, for the third we'll use 3:
+
+```{r 06-set-seed-3}
+set.seed(3) # makes the random selection of rows reproducible
+# create the 75 / 25 train/validation split
+set_rows <- Y_train_total %>% 
+  createDataPartition(p = 0.75, list = FALSE)
+
+#split the X and Y data into train/validation
+X_train <- X_train_total %>% slice(set_rows)
+Y_train <- Y_train_total[set_rows]
+X_validation <- X_train_total %>% slice(-set_rows)
+Y_validation <- Y_train_total[-set_rows]
+
+#train the KNN model with K=3, and predict the validation labels
+k = data.frame(k = 3)
+model_knn <- train(x = X_train, y = Y_train, method = "knn", tuneGrid = k)
+Y_validation_predicted <- predict(object = model_knn, X_validation)
+
+#compute the accuracy
+model_quality <- confusionMatrix(data = Y_validation_predicted, reference = Y_validation)
+model_quality$overall[1]
+```
+
+With three different shuffles of the data, we get three different values for accuracy: 0.80, 0.92, and 0.81! Which 
+one is correct? Sadly, there is no easy answer to that question. The best we can do is to do this many times and take 
+the average of the accuracies. Typically this is done is a more structured way so that each observation in the data 
+set is used in a validation set only a single time. The name for this strategy is called cross-validation and we illustrate it below:
 
 <img src="img/cv.png" width="800" />
 
@@ -301,7 +344,27 @@ knn_model_cv_10fold <- train(x = X_cancer, y = Y_cancer, method = "knn", tuneGri
 knn_model_cv_10fold
 ```
 
-## Choosing the number of neighbours for K-nearest neighbour classification
+
+
+
+
+
+
+### Cross-validation
+
+<center>
+<figure class="image">
+<img src="img/testing.png" width="600"/>
+<figcaption> 
+A typical 10-fold cross-validation data set split. <br>Source: https://towardsdatascience.com/train-test-split-and-cross-validation-in-python-80b61beca4b6
+</figcaption>
+</figure>
+</center>
+
+
+### Choosing the number of neighbours
+
+### Choosing the number of neighbours for K-nearest neighbour classification
 
 From 5- and 10-fold cross-validate we estimate that the prediction accuracy of our classifier to be ~ 83%. This could be not too bad of an accuracy, however what accuracy you aim for always depends on the downstream application of your analysis. Here, we are trying to predict a very important outcome, tumour cell diagnosis class. And the class label we assign to a real patient may have life or death consequences. Hence, we'd like to do better for this application than 83%. To do this we can use cross-validation in an even bigger way, we can choose a range of possible $k$'s and perform cross-validation to calculate the accuracy for each $k$, and then choose the smallest $k$ which gives us the best cross-validation accuracy. To do this, we will create a vector of values for $k$ instead of providing just 1.
 
